# cedl

./: .gitignore  README.md  c-edl-18838536.err  jobscript.job  pyproject.toml  requirements.txt
src/: dataset.py  datasets.py  evaluator.py  main.py  metrics.py  models.py  utils.py
src/Results/: cifar10_cifar100_cedlmc  cifar10_cifar100_cedlmeta  cifar10_cifar100_daedl  cifar10_cifar100_edl  cifar10_cifar100_edlppmc  cifar10_cifar100_edlppmeta  cifar10_cifar100_hedl  cifar10_cifar100_iedl  cifar10_cifar100_postnet  cifar10_cifar100_redl  cifar10_cifar100_sedl  cifar10_svhn_cedlmc  cifar10_svhn_cedlmeta  cifar10_svhn_daedl  cifar10_svhn_edl  cifar10_svhn_edlppmc  cifar10_svhn_edlppmeta  cifar10_svhn_hedl  cifar10_svhn_iedl  cifar10_svhn_postnet  cifar10_svhn_redl  cifar10_svhn_sedl  flowers_weeds_postnet  flowers_weeds_redl  flowers_weeds_sedl  mnist_emnist_cedlmc  mnist_emnist_cedlmeta  mnist_emnist_daedl  mnist_emnist_edl  mnist_emnist_edlppmc  mnist_emnist_edlppmeta  mnist_emnist_hedl  mnist_emnist_iedl  mnist_emnist_postnet  mnist_emnist_redl  mnist_emnist_sedl  mnist_fmnist_cedlmc.pkl  mnist_fmnist_cedlmc_beta_05  mnist_fmnist_cedlmc_beta_10  mnist_fmnist_cedlmc_beta_20  (+70 more)
src/cedl/: dataset.py  evaluator.py  main.py  metrics.py
src/cedl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cedl/Results/: flowers_weeds_cedlmeta
